--- a/src/main/resources/fxml/organize_match.fxml
+++ b/src/main/resources/fxml/organize_match.fxml
@@ -5,20 +5,16 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <BorderPane xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
-            styleClass="root-container" prefWidth="700" prefHeight="750">
+            prefWidth="700" prefHeight="750">
 
     <top>
-        <VBox spacing="10" styleClass="header-container">
+        <VBox spacing="10" styleClass="header-container" style="-fx-border-color: -color-border-subtle; -fx-border-width: 0 0 1 0;">
             <padding>
                 <Insets top="20" right="30" bottom="15" left="30"/>
             </padding>
 
             <HBox alignment="CENTER_LEFT" spacing="15">
-                <Label text="📅 ORGANIZE MATCH" styleClass="title-label">
-                    <font>
-                        <Font name="System Bold" size="24"/>
-                    </font>
-                </Label>
+                <Label text="📅 ORGANIZE MATCH" styleClass="title-3, accent"/>
 
                 <Region HBox.hgrow="ALWAYS"/>
 
@@ -64,8 +60,8 @@
                                 <Font name="System Bold" size="13"/>
                             </font>
                         </Label>
-                        <TextField fx:id="timeField" promptText="HH:MM (e.g., 18:30)"
-                                  styleClass="custom-text-field" prefWidth="280"/>
+                        <ComboBox fx:id="timeComboBox" promptText="Select time"
+                                  styleClass="custom-combo-box" prefWidth="280"/>
                     </VBox>
                 </HBox>
 
