--- a/src/main/resources/fxml/field_manager_dashboard.fxml
+++ b/src/main/resources/fxml/field_manager_dashboard.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
@@ -19,7 +20,7 @@
         <VBox alignment="CENTER_RIGHT" spacing="4">
             <Label fx:id="managerNameLabel" text="Manager: " styleClass="subtitle"/>
         </VBox>
-        <javafx.scene.image.ImageView fx:id="managerImageView" fitHeight="60" fitWidth="60" preserveRatio="true" smooth="true"/>
+        <ImageView fx:id="managerImageView" fitHeight="60" fitWidth="60" preserveRatio="true" smooth="true"/>
         <Button text="🔔" fx:id="notificationButton" onAction="#handleShowNotifications" styleClass="button-outlined"/>
         <Button text="Logout" onAction="#handleLogout" styleClass="danger-button"/>
     </HBox>
